sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:9: error: Int.type does not take parameters
      gap=Int(gap/1.3)
             ^